Add CityEntity and update RideEntity, UserEntity, and CityRepresentationModelAssembler
