# src/main/java/com/mkpw/blaBlaTwo/hateoas/RideRepresentationModelAssembler.java
@@ -3,7 +3,6 @@ package com.mkpw.blaBlaTwo.hateoas;
 import com.mkpw.blaBlaTwo.controllers.RidesController;
 import com.mkpw.blaBlaTwo.entity.RideEntity;
 import com.mkpw.blaBlaTwo.model.Ride;
-import com.mkpw.blaBlaTwo.services.RideService;
 import org.springframework.beans.BeanUtils;
 import org.springframework.hateoas.server.mvc.RepresentationModelAssemblerSupport;
 import org.springframework.stereotype.Component;
@@ -19,15 +18,18 @@ import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 
 @Component
 public class RideRepresentationModelAssembler extends RepresentationModelAssemblerSupport<RideEntity, Ride> {
-    private final RideService rideService;
+
+    private final CityRepresentationModelAssembler cityAssembler;
+    private final UserRepresentationModelAssembler userAssembler;
 
     /**
      * Creates a new {@link RepresentationModelAssemblerSupport} using the given controller class and
      * resource type.
      */
-    public RideRepresentationModelAssembler(RideService rideService) {
+    public RideRepresentationModelAssembler(CityRepresentationModelAssembler cityAssembler, UserRepresentationModelAssembler userAssembler) {
         super(RidesController.class, Ride.class);
-        this.rideService = rideService;
+        this.cityAssembler = cityAssembler;
+        this.userAssembler = userAssembler;
     }
 
     /**
@@ -38,18 +40,21 @@ public class RideRepresentationModelAssembler extends RepresentationModelAssembl
     @Override
     public Ride toModel(RideEntity entity) {
         String rideId = Objects.nonNull(entity.getId()) ? entity.getId().toString() : null;
-        Ride resource =new Ride();
+        Ride resource = new Ride();
         BeanUtils.copyProperties(entity, resource);
-        resource.departureTime(entity.getDepartureTime().toLocalDateTime().atOffset(ZoneOffset.UTC));
+        resource.departureTime(entity.getDepartureTime().toInstant().atOffset(ZoneOffset.UTC))
+                .driver(userAssembler.toModel(entity.getDriver()))
+                .startCity(cityAssembler.toModel(entity.getStartCity()))
+                .destinationCity(cityAssembler.toModel(entity.getDestinationCity()));
         resource.add(linkTo(methodOn(RidesController.class).getRideById(rideId)).withSelfRel());
-        return resource;    }
+        return resource;
+    }
 
     /**
      * Coverts the collection of Ride entities to list of resources.
      *
      * @param entities
      */
-    //TODO
     public List<Ride> toListModel(Iterable<RideEntity> entities) {
         if (Objects.isNull(entities)) {
             return List.of();
